--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <!--  本体部分  -------------------------------------->
 
 <body>
+    <!-- モーダルウィンドウ表示部分　--------------------->
+    <!-- 設定画面 -->
+    <ul id="mordal-setting" class="mordal-content">
+        <li id="remove" onclick="settingRemove()">データ消去</li>
+        <li id="reload" onclick="window.location.reload()">ページの再読み込み</li>
+    </ul>
 
     <!--  ヘッダー(上部)部分  -->
     <header>
@@ -37,14 +43,13 @@
     </header>
 
     <!--  センタービジュアル部分  -->
-    <main>
-        <div id="Airy" class="bgv select">
+    <main class="">
+        <div id="Airy" class="select">
             <img src="img/Airy/Airy-main1.png" alt="エアリー" id="Airy-img">
         </div>
-        <div id="Mily" class="bgv">
+        <div id="Mily" class="">
             <img src="img/Mily/Mily-main1.png" alt="ミリー" id="Mily-img">
         </div>
-        <div id="Mily-tap">aaa</div>
     </main>
 
     <!--  メイン操作(下部)部分  -->
@@ -74,6 +79,7 @@
                             <div id="Mily-nowE" class="nowEH">現在：0エネルギー/タップ</div>
                         </li>
                         <li id="Mily-e-levelup" class="up">
+                            <div class="up-icon">Level UP!</div>
                             <span id="Mily-levelup-incE">+0生命力/秒</span><br>
                             <span id="Mily-levelup-needH">0生命力</span>
                         </li>
@@ -85,11 +91,12 @@
                         <li class="des">
                             生命力効率UP<br>
                             <div class="des-des">
-                                水中に漂う栄養素を取り込み、生命力として貯めてくれる。<br> レベルが上がると、より多くの栄養素を取り込み、貯めることが出来る。
+                                水中に漂う栄養素を取り込み、生命力として貯めてくれる。<br>レベルが上がると、より多くの栄養素を取り込み、貯めることが出来る。
                             </div>
                             <div id="Mily-nowH" class="nowEH">現在：0生命力/秒</div>
                         </li>
                         <li id="Mily-h-levelup" class="up">
+                            <div class="up-icon">Level UP!</div>
                             <span id="Mily-levelup-incH">+0生命力/秒</span><br>
                             <span id="Mily-levelup-needE">0生命力</span>
                         </li>
@@ -103,13 +110,13 @@
                         <li id="Andon-e-lv" class="lv"></li>
                         <li class="des">
                             アンドンクラゲ<br>
-                            <span class="des-des">
-                                長い触手を巧みに操り、遠くの獲物も逃さずキャッチする。<br>
-                                レベルを上げることでよりたくさんのクラゲが協力してくれる。
-                            </span><br>
+                            <div class="des-des">
+                                長い触手を巧みに操り、遠くの獲物も逃さずキャッチする。<br> レベルを上げることでよりたくさんのクラゲが協力してくれる。
+                            </div>
                             <div id="Andon-nowE" class="nowEH">現在：0エネルギー/秒</div>
                         </li>
                         <li id="Andon-e-levelup" class="up">
+                            <div class="up-icon">Level UP!</div>
                             <span id="Andon-levelup-incE">+0エネルギー/秒</span><br>
                             <span id="Andon-levelup-needH">0生命力</span>
                         </li>
@@ -120,13 +127,13 @@
                         <li id="Beni-e-lv" class="lv"></li>
                         <li class="des">
                             ベニクラゲ<br>
-                            <span class="des-des">
-                                色鮮やかな赤が特徴的。とっても小さいけれど働き者。<br>
-                                レベルを上げることでよりたくさんのクラゲが協力してくれる。
-                            </span><br>
+                            <div class="des-des">
+                                色鮮やかな赤が特徴的。とっても小さいけれど働き者。<br> レベルを上げることでよりたくさんのクラゲが協力してくれる。
+                            </div>
                             <div id="Beni-nowE" class="nowEH">現在：0エネルギー/秒</div>
                         </li>
                         <li id="Beni-e-levelup" class="up">
+                            <div class="up-icon">Level UP!</div>
                             <span id="Beni-levelup-incE">+0エネルギー/秒</span><br>
                             <span id="Beni-levelup-needH">0生命力</span>
                         </li>
@@ -137,13 +144,13 @@
                         <li id="Tako-e-lv" class="lv"></li>
                         <li class="des">
                             タコクラゲ<br>
-                            <span class="des-des">
-                                斑点の様に見えるものは実は藻の一種。この藻とは持ちつ持たれつの関係。<br>
-                                レベルを上げることでよりたくさんのクラゲが協力してくれる。
-                            </span><br>
+                            <div class="des-des">
+                                斑点の様に見えるものは実は藻の一種。この藻とは持ちつ持たれつの関係。<br> レベルを上げることでよりたくさんのクラゲが協力してくれる。
+                            </div>
                             <div id="Tako-nowE" class="nowEH">現在：0エネルギー/秒</div>
                         </li>
                         <li id="Tako-e-levelup" class="up">
+                            <div class="up-icon">Level UP!</div>
                             <span id="Tako-levelup-incE">+0エネルギー/秒</span><br>
                             <span id="Tako-levelup-needH">0生命力</span>
                         </li>
@@ -154,13 +161,13 @@
                         <li id="Sakasa-e-lv" class="lv"></li>
                         <li class="des">
                             サカサクラゲ<br>
-                            <span class="des-des">
-                                砂の上に張り付き、逆さになって泳ぐ変わり者。マイペースな所も…。<br>
-                                レベルを上げることでよりたくさんのクラゲが協力してくれる。
-                            </span><br>
+                            <div class="des-des">
+                                砂の上に張り付き、逆さになって泳ぐ変わり者。マイペースな所も…。<br> レベルを上げることでよりたくさんのクラゲが協力してくれる。
+                            </div>
                             <div id="Sakasa-nowE" class="nowEH">現在：0エネルギー/秒</div>
                         </li>
                         <li id="Sakasa-e-levelup" class="up">
+                            <div class="up-icon">Level UP!</div>
                             <span id="Sakasa-levelup-incE">+0エネルギー/秒</span><br>
                             <span id="Sakasa-levelup-needH">0生命力</span>
                         </li>
@@ -171,13 +178,13 @@
                         <li id="Echizen-e-lv" class="lv"></li>
                         <li class="des">
                             エチゼンクラゲ<br>
-                            <span class="des-des">
-                                その巨体を住処にするために寄って来る魚を嫌がっている。でもその魚たちを食べたりはしない。<br>
-                                レベルを上げることでよりたくさんのクラゲが協力してくれる。
-                            </span><br>
+                            <div class="des-des">
+                                その巨体を住処にするために寄って来る魚を嫌がっている。でもその魚たちを食べたりはしない。<br> レベルを上げることでよりたくさんのクラゲが協力してくれる。
+                            </div>
                             <div id="Echizen-nowE" class="nowEH">現在：0エネルギー/秒</div>
                         </li>
                         <li id="Echizen-e-levelup" class="up">
+                            <div class="up-icon">Level UP!</div>
                             <span id="Echizen-levelup-incE">+0エネルギー/秒</span><br>
                             <span id="Echizen-levelup-needH">0生命力</span>
                         </li>
@@ -190,17 +197,18 @@
     <!--  フッター(下部)部分  -->
     <footer>
         <ul id="footer-control" class="side-by-side bg">
-            <li id="home" class="btn">ホーム</li>
+            <li id="home" class="btn">成長</li>
             <li id="evo" class="btn">進化</li>
         </ul>
     </footer>
 
+
     <!-- ライブラリファイル -->
-    <script src="lib/jquery-3.1.1.min.js"></script>
-    <script src="lib/tap.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src=" lib/jquery-3.1.1.min.js "></script>
+    <script src="lib/tap.js "></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
     <!-- 自作ファイル群 -->
-    <script type="text/javascript" src="script/common.js"></script>
+    <script type="text/javascript " src="script/common.js "></script>
 
 </body>
 
