Resolve copyright issues

--- a/game-DBver.html
+++ b/game-DBver.html
@@ -6,7 +6,7 @@
   <title>クラゲのエアリー</title>
   <!-- ライブラリファイル -->
   <!-- 自作ファイル群 -->
-  <link rel="stylesheet" href="css/game.css">
+  <link rel="stylesheet" href="css/index.css">
   <!-- Google Fonts+ -->
   <link href="https://fonts.googleapis.com/earlyaccess/mplus1p.css" rel="stylesheet" />
   <!--アイコン-->
@@ -209,9 +209,8 @@
   <script src=" lib/jquery-3.1.1.min.js "></script>
   <script src="lib/tap.js "></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
-  <!-- 自作ファイル群 -mga->
-    <script type="text/javascript " src="script/common.js "></script>
-    <script type="text/javascript " src="script/localstorage.js "></script>
+  <!-- 自作ファイル群 -->
+  <script type="text/javascript " src="script/common.js "></script>
 
 </body>
 
