--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
   <script src=" lib/jquery-3.1.1.min.js "></script>
   <script src="lib/tap.js "></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
-  <!-- 自作ファイル群 -mga->
-    <script type="text/javascript " src="script/common.js "></script>
-    <script type="text/javascript " src="script/localstorage.js "></script>
+  <!-- 自作ファイル群 -->
+  <script type="text/javascript " src="script/common.js "></script>
+  <script type="text/javascript " src="script/localstorage.js "></script>
 
 </body>
 
